src/style/index.css
/* ... */
.purchase-credits__content {
  display: flex;
  flex-direction: column;
  align-items: center
}

.purchase-credits {
  width: 100%;
}

.purchase-credits__content {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: center;
  min-height: 120px;
}

.purchase-credits__buttons {
  display: block;
  width: 100%;
  padding-top: 10px;
}

.purchase-credits__buttons .right {
  float: right;
  margin: 0;
}

.purchase-credits__buttons .left {
  float: left;
  margin: 0;
}

.payment-panel {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  width: 100%;
}

.payment-panel__label {
  font-size: 18px;
  line-height: 24px;
}

.address-viewer {
  display: flex;
  border-radius: 8px;
  margin-left: 10px;
  font-size: 18px;
}

.address-viewer_menu {
  display: flex;
  justify-content: flex-end;
}

.address-viewer_menu_option {
  margin-right: 5px;
  margin-bottom: 4px;
  cursor: pointer;
}

.address-viewer_menu_option:hover {
  color: #0079d3;
}

.address-viewer_text,
.paywall-amount {
  font-weight: bold;
  margin-right: 5px;
}

.paywall-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.paywall-content > p {
  margin-bottom: 5px;
  text-align: left;
  width: 100%;
}

.paywall-payment-sent {
  cursor: pointer;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  width: 84px;
  display: inline-block;
  vertical-align: bottom;
}

.fullwidth {
  width: 100%;
  max-width: 100% !important;
}

.header-alert {
  position: fixed;
  min-height: 50px;
  top: 0px;
  left: 50%;
  z-index: 9999;
  transform: translateX(-50%);
}

.action-needed-alert > div {
  margin: 0px !important;
}

/* mde */

.commentarea > .usertext textarea:not(:focus):empty  {
    background: url("./theme/commentboxbg.png") 50% 50% no-repeat
}
.modal {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  z-index: 99999;
}

.modal-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  background: rgba(112,112, 112, 0.8);
  z-index: 1;
}

.modal-container {
  overflow-y: auto;
  box-sizing: border-box;
  padding-top: 80px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.modal-content {
  background: white;
  box-shadow: 0 9px 46px 8px rgba(0,0,0,.14),0 11px 15px -7px rgba(0,0,0,.12),0 24px 38px 3px rgba(0,0,0,.2);
  z-index: 2;
  margin-bottom: 40px;
}

.modal-content-header {
  padding: 10px 8px;
  display: flex;
  align-items: center;
}

.modal-content-actions {
  display: flex;
  justify-content: flex-end;
  padding: 10px 8px;
}

.modal-content-actions > .btn {
  margin-right: 16px;
  margin-left: 0;
  min-width: 70px;
}

.modal-content textarea.modal-reason {
  margin: 12px 0 12px 36px;
  padding: 8px 42px 8px 8px;
  border: 0 solid;
  border-radius: 2px;
  width: 100%;
  height: 72px;
  line-height: 24px;
  background: #fff;
  color: rgba(0, 0, 0, .7);
  -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .14);
  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .14);
  -webkit-transition: background .2s cubic-bezier(.4, 0, .2, 1), color .2s cubic-bezier(.4, 0, .2, 1), -webkit-box-shadow .2s cubic-bezier(.4, 0, 1, 1);
  transition: background .2s cubic-bezier(.4, 0, .2, 1), color .2s cubic-bezier(.4, 0, .2, 1), -webkit-box-shadow .2s cubic-bezier(.4, 0, 1, 1);
  -o-transition: box-shadow .2s cubic-bezier(.4, 0, 1, 1), background .2s cubic-bezier(.4, 0, .2, 1), color .2s cubic-bezier(.4, 0, .2, 1);
  transition: box-shadow .2s cubic-bezier(.4, 0, 1, 1), background .2s cubic-bezier(.4, 0, .2, 1), color .2s cubic-bezier(.4, 0, .2, 1);
  transition: box-shadow .2s cubic-bezier(.4, 0, 1, 1), background .2s cubic-bezier(.4, 0, .2, 1), color .2s cubic-bezier(.4, 0, .2, 1), -webkit-box-shadow .2s cubic-bezier(.4, 0, 1, 1);
}

.modal-content .message-ct {
  margin: 16px;
}

.modal-content__wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px 8px;
  min-height: 80px;
}

.receive-content-nest-qrimage {
  width: 140px;
  height: 140px;
  float: right;
  background-position: 50% 50%;
  background-size: contain;
  background-repeat: no-repeat;
}

.disabled, div.disabled {
  background: rgba(0, 0, 0, .08);
  color: #bbb;
  cursor: not-allowed;
  user-select: none;
}

.appWrapper {
  background: #f3f5f6;
  min-height: 100%;
  overflow-x: scroll;
}

.available-credits {
  margin: 16px;
  margin-left: 0px;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.searching-credits {
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin-right: 20px;
  padding: 4px;
}

.searching-credits__text {
  display: flex;
  flex-direction: column;
  line-height: 18px;
}

.credits-purchase-menu {
  display: flex;
  width: 100%;
  justify-content: flex-end
}

.credits-purchase-menu__button {
  margin: 0px 0px 10px 10px;
}

.credit-purchase-table {
  border: 1px solid #999;
  margin-bottom: 16px;
}

.credit-purchase-row {
  padding: 8px;
  border-bottom: 1px solid #ccc;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.credit-purchase-header .credit-purchase-row {
  border-bottom-color: #999;
}

.credit-purchase-cell {
  float: left;
  padding: 4px;
  margin: 0 8px;
}

.credit-purchase-header .credit-purchase-cell {
  font-weight: bold;
  width: 100%;
}

.credit-purchase-body .credit-purchase-cell {
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.credit-purchase-date {
  width: 180px;
  text-align: center;
}

.credit-purchase-date-text {
  text-align: center;
}

.credit-purchase-number {
	width: 40% !important;
  text-align: center;
}

.credit-purchase-type {
  text-align: center;
}
.credit-purchase-price {
  text-align: center;
}
.credit-purchase-tx {
  text-align: center;
}
.credit-purchase-status {
  width: 100px;
  text-align: center;
}
.credit-purchase-status-font {
  font-weight: 500;
}
.user-page {
  margin: 0 auto;
  width: 800px;
}
/* ... */

